--- a/views/add.ejs
+++ b/views/add.ejs
@@ -7,19 +7,14 @@
             <div class="bg-red-500 text-white p-3 rounded-md mb-4 w-1/3">
                 <%= error %>
             </div>
-        <% } %>
-        <form action="/createpost" method="POST" enctype="multipart/form-data">
-            <input class="block w-1/3 px-3 py-2
-            " type="file" name="postimage">
-            <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md
-            " type="text" placeholder="Title" name="title">
-            <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md
-            " type="text" placeholder="Description" name="description">
-            <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md
-            " type="text" placeholder="Tags">
-            <input class="block w-1/3 px-3 py-2 mt-2 bg-red-700 rounded-md
-            " type="submit" value="Create Post" name="" id="">
-        </form>
+            <% } %>
+                <form action="/createpost" method="POST" enctype="multipart/form-data">
+                    <input class="block w-1/3 px-3 py-2" type="file" name="postimage" required>
+                    <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md" type="text" placeholder="Title" name="title" required>
+                    <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md" type="text" placeholder="Description" name="description" required>
+                    <input class="block w-1/3 px-3 py-2 mt-2 border-2 rounded-md" type="text" placeholder="Tags (comma separated)" name="tags">
+                    <input class="block w-1/3 px-3 py-2 mt-2 bg-red-700 rounded-md" type="submit" value="Create Post">
+                </form>
     </div>
 
-<% include ./partials/footer.ejs %>
+    <% include ./partials/footer.ejs %>
