--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>PinterestVision: Does everything but better</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
