--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,7 +15,7 @@
                     <a href="/post/<%= elem._id %>" class="card w-32">
                         <div class="w-full h-40 bg-zinc-700 rounded-xl overflow-hidden">
                             <img class="w-full h-full object-cover" 
-                                 src="/images/uploads/<%= elem.image %>" 
+                                 src="<%= elem.image %>" 
                                  alt="<%= elem.title %>">
                         </div>
                         <h5 class="mt-2 text-sm"><%= elem.title %></h5>
