--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,23 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PinterestVision: Does everything but better</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
 />
-<script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
   <% if(nav === true){ %>
     <div class="w-full px-10 py-3 flex justify-between items-center bg-zinc-800 text-white">
-      <h3>Pinterest</h3>
+      <a href="/all" class="font-bold text-lg">VisionPinterest</a>
       <div class="flex gap-10 items-center">
-        <a href="/profile">Profile</a>
+        <a href="/all">All Posts</a>
         <a href="/feed">Feed</a>
-        <a class="px-3 py-2 bg-red-700 text-white rounded-lg" href="/logout">Logout</a>
+        <a href="/profile">Profile</a>
+        <a class="px-3 py-2 rounded-full bg-[#e60023] text-white font-semibold hover:bg-[#ad081b] transition-colors duration-300" href="/logout">Logout</a>
       </div>
     </div>
-  <% } %> 
-  
+  <% } else { %> 
+    <div class="w-full px-10 py-3 flex justify-between items-center bg-white text-white">
+      <h3 class="text-black font-bold text-lg">VisionPinterest</h3>
+      <div class="flex gap-10 items-center">
+        <a href="/all" class="px-3 py-2 rounded-full bg-gray-100 text-gray-800 font-semibold hover:bg-gray-200 transition-colors duration-300">All Posts</a>
+        <a class="px-3 py-2 bg-[#e60023] text-white font-semibold hover:bg-[#ad081b] transition-colors duration-300 rounded-full" href="/register">Sign Up</a>
+        <a class="px-3 py-2 bg-[#e60023] text-white font-semibold hover:bg-[#ad081b] transition-colors duration-300 rounded-full" href="/login">Login</a>
+      </div>
+    </div>
+  <% } %>
