--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,9 @@
                     <i class="ri-edit-2-line text-zinc-800"></i>
                 </span>
                 <div class="w-32 h-32 bg-zinc-200 rounded-full overflow-hidden">
-                    <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profileImage %>" alt="">
+                    <!-- for local setup -->
+                    <!-- <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profileImage %>" alt=""> -->
+                    <img class="w-full h-full object-cover" src="<%= user.profileImage %>" alt="">
                 </div>
             </div>
             <h1 class="text-3xl font-semibold"><%= user.fullname %></h1>
@@ -27,7 +29,8 @@
                 
                 <div class="w-55 h-45 bg-zinc-200 rounded-xl overflow-hidden">
                     <!-- If we want to display 3 images, we'll have to create 3 layouts, and then have to send 3 images from backend -->
-                     <img class="w-full h-full object-cover" src="/images/uploads/<%=user?.posts[0]?.image %>" alt="">
+                     <!-- <img class="w-full h-full object-cover" src="/images/uploads/<%=user?.posts[0]?.image %>" alt=""> -->
+                     <img class="w-full h-full object-cover" src="<%=user?.posts[0].image %>" alt="<%= user.posts[0].title %>">
                 </div>
                 <a href="/show/posts" class="inline-block text-xl font-semibold mt-2">Your Uploaded Pins</a>
                 <h5 class="text-sm font-medium opacity-60"><%= user.posts.length %></h3>
