--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,14 +26,20 @@
         </div>
         <div class="cards flex flex-wrap gap-10 px-10 mt-10">
             <div class="card">
-                
                 <div class="w-55 h-45 bg-zinc-200 rounded-xl overflow-hidden">
-                    <!-- If we want to display 3 images, we'll have to create 3 layouts, and then have to send 3 images from backend -->
-                     <!-- <img class="w-full h-full object-cover" src="/images/uploads/<%=user?.posts[0]?.image %>" alt=""> -->
-                     <img class="w-full h-full object-cover" src="<%=user?.posts[0].image %>" alt="<%= user.posts[0].title %>">
+                    <% if (user.posts && user.posts.length > 0) { %>
+                        <img class="w-full h-full object-cover" 
+                             src="<%= user?.posts[0].image %>" 
+                             alt="<%= user.posts[0].title %>"
+                             onerror="this.src='/images/placeholder.png'">
+                    <% } else { %>
+                        <div class="flex items-center justify-center h-full">
+                            <p class="text-zinc-400">No posts yet</p>
+                        </div>
+                    <% } %>
                 </div>
                 <a href="/show/posts" class="inline-block text-xl font-semibold mt-2">Your Uploaded Pins</a>
-                <h5 class="text-sm font-medium opacity-60"><%= user.posts.length %></h3>
+                <h5 class="text-sm font-medium opacity-60"><%= user.posts ? user.posts.length : 0 %> pins</h5>
             </div>
         </div>
     </div>
